# tiny-stories-generator

./: .env.example  .gitignore  CONTRIBUTE.md  README.md  config.yaml  main.py  pyproject.toml  syntetic_data_config.yaml
src/: clients.py  generate_prompts.py  get_results.py  main.py  metrics.py  prompts.py  setups.py
