[project]
name = "tiny-coop-es"
version = "0.1.0"
description = "Code for generation of synthetic data based on TinyStories paper"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic==0.76.0",
    "litellm>=1.81.6",
    "mistralai==1.11.1",
    "mlflow==3.9.0",
    "pandas>=2.3.3",
    "pyspark>=4.1.1",
    "python-dotenv>=1.2.1",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["src"]
